--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <ol>
-            <li> <a href="recipes/Grilled_Cheese.html">Grilled Cheese Sanndwich</a> </li>
+            <li> <a href="recipes/Grilled_Cheese.html">Grilled Cheese Sandwich</a> </li>
             <li> <a href="recipes/Chocolate_Cake.html"> Chocolate Cake</a> </li>
         </ol>
     </body>
